--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -6,7 +6,7 @@ body {
 }
 
 h1 {
-  margin: 0px;
+  margin: 0px 0px 20px 0px;
   font-family: 'Lora', serif;
 }
 
@@ -17,7 +17,6 @@ header {
 }
 
 header img {
-  float: right;
   width: 20%;
   border: 5px solid #fff;
 }
