--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -1,1 +1,199 @@
+html {
+	-webkit-text-size-adjust: 100%;
+	-ms-text-size-adjust: 100%;
+	background-color: #ebebd3;
+	font-family: 'Open Sans', sans-serif;
+}
+
+/*----------- apply a natural box layout model to all elements --------------*/
+* {
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Roboto:wght@100;400;900&display=swap');
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	margin: 0;
+	padding: 0;
+
+}
+
+header {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	margin: 0;
+	padding: 20px 0px;
+	color: #fff;
+	background-color: #A2BBD7;
+}
+
+#logo {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	width: 80px;
+	height: 80px;
+	margin-bottom: 0px;
+	padding: 7px 1px 1px 1px;
+	background-color: #ebebd3;
+	border: 2px solid #000;
+	border-radius: 100%;
+}
+
+#logo img {
+	height: 90%;
+}
+
+#branding {
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+}
+
+#branding h1 {
+	font-family: 'Roboto', sans-serif;
+	font-weight: bold;
+	font-size: 3em;
+	/* letter-spacing: .05em; */
+	color: #000000;
+}
+
+#branding span {
+	margin: 0;
+	color: #000000;
+	font-family: 'Open Sans', sans-serif;
+	font-style: italic;
+}
+
+nav {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin: 0;
+	margin-bottom: 10px;
+	background-color: #083d77;
+}
+
+nav ul {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	margin: 0;
+	padding: 0;
+	text-align: center;
+}
+
+nav ul li {
+	display: none;
+	padding: 0;
+	width: 100%;
+}
+
+nav ul li:first-child {
+	display: block;
+}
+
+nav a,
+nav a:visited {
+	display: block;
+	width: 100%;
+	height: 100%;
+	padding: 15px 0;
+	color: #fff;
+	text-decoration: none;
+}
+
+nav a:hover {
+	color: #F4D35E;
+	background-color: #052A51;
+}
+
+nav a.active {
+	background-color: #052A51;
+}
+
+nav ul.responsive li {
+	display: block;
+	width: 100%;
+}
+
+main {
+	margin: 0 auto;
+	max-width: 1024px;
+	padding: 15px;
+}
+
+main #hero {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	min-height: 150px;
+	margin-bottom: 20px;
+	font-size: 5em;
+	background-color: #F4D35E;
+	border-radius: 10px;
+	border: 1px solid #d8bc56;
+}
+
+main #forecast {
+	display: grid;
+	grid-auto-flow:row;
+	row-gap: 10px;
+	margin-bottom: 20px;
+}
+
+main #forecast div {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	min-height: 200px;
+	background-color: #A2BBD7;
+	border-radius: 10px;
+	border: 1px solid #8DABCE;
+}
+
+#article, #contact {
+	margin-bottom: 20px;
+	padding: 20px;
+	line-height: 1.5em;
+	background-color: #fff;
+	border-radius: 10px;
+	border: 1px solid #A2BBD7;
+}
+
+footer {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin: 0 auto;
+	/* max-width: 1024px; */
+	padding: 10px 10px;
+	font-size: .9em;
+	color: #fff;
+	line-height: 1.5em;
+	background-color: #083d77;
+}
+
+footer a, footer a:visited {
+	color: #F4D35E;
+	text-decoration: none;
+}
+
+footer a:hover {
+	text-decoration: underline;
+}
