--- a/lesson5/css/large.css
+++ b/lesson5/css/large.css
@@ -1,3 +1,19 @@
-@media (min-width: 1200px) {
+@media (min-width: 1080px) {
+
+    #current-temperature {
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 2;
+        grid-row-end: 3;
+        margin: 10px 0 0 10px;
+        box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, .5);
+        transition-property: grid-column;
+        transition-duration: 4s;
+        transition-delay: 2s;
+    }
+
+    #article img {
+        max-width: 20%;
+    }
 
 }
