--- a/lesson5/css/medium.css
+++ b/lesson5/css/medium.css
@@ -1,3 +1,37 @@
-@media (min-width: 768px) {
+@media (min-width: 600px) {
 
+    main h2 {
+        text-align: left;
+    }
+
+    #hero h2 {
+        text-align: left;
+    }
+
+    #current-temperature {
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 2;
+        grid-row-end: 3;
+        margin: 10px 0 0 10px;
+        box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, .5);
+    }
+
+    #forecast {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    #forecast div {
+        width: 15%;
+    }
+
+    #article img {
+        max-width: 50%;
+        float: right;
+        margin: 0 0 20px 20px;
+        box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, .5);
+    }
+    
 }
