--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -87,7 +87,7 @@ header {
 }
 
 #letterhead h1 {
-	font-size: 1.2em;
+	font-size: 1.4em;
 	font-weight: bold;
 }
 
@@ -114,6 +114,10 @@ header {
 	background-color: var(--color-notification-background);
 }
 
+/*  
+
+NAVIGATION  
+========================================= */
 
 nav {
 	display: flex;
@@ -165,42 +169,68 @@ nav ul.responsive li {
 	width: 100%;
 }
 
+
+/*  
+
+MAIN  
+========================================= */
+
 main {
+	margin: 0 auto;
+	max-width: 1080px;
 	padding: 0 15px 0 15px;
 }
 
+main h2 {
+	text-align: center;
+}
+
+
+/*  
+
+HERO  
+========================================= */
+
 #hero {
 	display: grid;
-	grid-template-rows: 1fr 1fr 1fr;
-	grid-template-rows: 30px 1fr 1fr 1fr;
-	margin-bottom: 20px;
-	border: 1px solid black;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	grid-template-rows: 30px 1fr 1fr;
+	row-gap: 15px;
+	margin-bottom: 30px;
 }
 
 #hero h2 {
-	grid-column-start: 1;
-	grid-row-start: 1;
+	grid-column: 1 / 5;
+	grid-row: 1 / 1;
+	text-align: center;
 }
 
-#hero-background {
+#hero img {
 	grid-column-start: 1;
+	grid-column-end: 5;
 	grid-row-start: 2;
-	height: 300px;
-	background-position: center;
-	background-size: cover;
-	background-image: url("../images/sunflowers.jpg");
-	/* border-radius: 15px; */
-	z-index: -1000;
+	grid-row-end: 4;
+	width: 100%;
+	/* border-radius: 5px; */
+	z-index: 0;
+}
+
+#current-temperature {
+	grid-column-start: 1;
+	grid-column-end: 5;
+	grid-row-start: 4;
+	grid-row-end: 5;
+	margin-bottom: 15px;
+	padding: 10px;
+	color: white;
+	background-color: rgba(0,50,0, .9);
+	/* border-radius: 5px; */
+	z-index: 2;
+	
 }
 
 #hero table {
-	grid-column-start: 1;
-	grid-row-start: 2;
-	align-self: start;
-	padding: 10px;
-	color: white;
-	background-color:var(--color-blue);
-	z-index: 1000;
+	width: 100%;
 }
 
 #hero table th {
@@ -223,9 +253,65 @@ main {
 }
 
 
+/*  
+
+5-Day Forecast  
+========================================= */
+
 
 #forecast {
-  display: none;
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 30px;
+	padding-top: 20px;
+}
+
+#forecast div {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	height: 100px;
+	margin-bottom: 50px;
+	/* border: 1px solid black; */
+}
+
+#forecast img {
+	max-height: 90%;
+	max-width: 90%;
+}
+
+#forecast div span {
+	display: block;
+	margin-bottom: 10px;
+}
+
+
+
+/*  
+
+Article
+========================================= */
+
+#article {
+	padding: 50px;
+	background-color: white;
+	border-radius: 5px;
+	margin-bottom: 30px;
+}
+
+#article h2 {
+	margin-bottom: 1em;
+}
+
+#article img {
+	width: 100%;
+	margin-bottom: 30px;
+}
+
+#article p {
+	margin-bottom: 1.7em;
+	line-height: 1.7em;
 }
 
 footer {
