--- a/lesson5/css/medium.css
+++ b/lesson5/css/medium.css
@@ -33,5 +33,28 @@
         margin: 0 0 20px 20px;
         box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, .5);
     }
+
+    #contact {
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: flex-start;
+        justify-content: space-between;
+        margin: 0 auto;
+        width: 100%;
+        margin-bottom: 30px;
+        padding: 15px;
+    }
+
+    #contact div {
+        width: 50%;
+    }
+
+    #contact h2 {
+        margin-bottom: 30px;
+    }
+
+    #contact img {
+        width: 50%;
+    }
     
 }
