--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -314,14 +314,55 @@ Article
 	line-height: 1.7em;
 }
 
+
+
+/*  
+
+Contact
+========================================= */
+
+
+
 footer {
 	display: flex;
 	flex-direction: column;
 	align-content: center;
 	justify-content: center;
-	padding: 10px 0 10px 0;
+	padding: 20px 0 30px 0;
 	font-size: .8em;
 	color: #fff;
 	text-align: center;
 	background-color: var(--color-navigation-background);
+}
+
+#contact {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	margin-bottom: 30px;
+	padding: 15px;
+}
+
+#contact div {
+	margin-bottom: 30px;
+}
+
+#contact h2 {
+	margin-bottom: 10px;
+	font-size: 2em;
+}
+
+#contact p {
+	font-size: 1.5em;
+	line-height: 1.7em;
+}
+
+#contact img {
+	/* max-width: 400px; */
+	width: 100%;
+}
+
+.updated {
+	margin-left: 10px;
 }
