--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -344,8 +344,9 @@ footer {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	margin-bottom: 30px;
 	padding: 15px;
+	color: #fff;
+	background-color: var(--color-navigation-hover);
 }
 
 #contact div {
@@ -358,7 +359,7 @@ footer {
 }
 
 #contact p {
-	font-size: 1.5em;
+	font-size: 1em;
 	line-height: 1.7em;
 }
 
