--- a/lesson6/css/medium.css
+++ b/lesson6/css/medium.css
@@ -60,10 +60,28 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        margin-bottom: 30px;
+        padding-top: 20px;
     }
-
+    
     #forecast div {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
         width: 15%;
+        height: 100px;
+        margin-bottom: 50px;
+    }
+    
+    #forecast img {
+        max-height: 90%;
+        max-width: 90%;
+    }
+    
+    #forecast div span {
+        display: block;
+        margin-bottom: 10px;
     }
 
     #article img {
@@ -91,6 +109,7 @@
     }
 
     #contact img {
+        display: inline;
         width: 40%;
     }
     
