--- a/lesson6/css/small.css
+++ b/lesson6/css/small.css
@@ -260,35 +260,9 @@ HERO
 5-Day Forecast  
 ========================================= */
 
-
 #forecast {
-	display: flex;
-	flex-direction: column;
-	margin-bottom: 30px;
-	padding-top: 20px;
+	display:none;
 }
-
-#forecast div {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	height: 100px;
-	margin-bottom: 50px;
-	/* border: 1px solid black; */
-}
-
-#forecast img {
-	max-height: 90%;
-	max-width: 90%;
-}
-
-#forecast div span {
-	display: block;
-	margin-bottom: 10px;
-}
-
-
 
 /*  
 
@@ -350,8 +324,7 @@ Contact
 }
 
 #contact img {
-	/* max-width: 400px; */
-	width: 100%;
+	display: none;
 }
 
 .updated {
