--- a/lesson8/css/small.css
+++ b/lesson8/css/small.css
@@ -116,10 +116,7 @@ header {
 	transform: rotate(90deg);
 }
 
-/*  
-
-NAVIGATION  
-========================================= */
+/*  =============================== NAVIGATION =============================== */
 
 nav {
 	display: flex;
@@ -172,18 +169,15 @@ nav ul.responsive li {
 }
 
 
-/*  
-
-MAIN  
-========================================= */
+/*  =============================== MAIN =============================== */
 
 main {
-	margin: 0 auto;
+	/* margin: 0 auto;
 	margin-bottom: 50px;
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
-	justify-content:space-evenly;
+	justify-content:space-evenly; */
 }
 
 main h2 {
@@ -222,10 +216,7 @@ main.gallery img {
 
 
 
-/*  
-
-HERO  
-========================================= */
+/*  =============================== HERO =============================== */
 
 #hero {
 	display: grid;
@@ -289,19 +280,13 @@ HERO
 }
 
 
-/*  
-
-5-Day Forecast  
-========================================= */
+/*  =============================== FORECAST =============================== */
 
 #forecast {
 	display:none;
 }
 
-/*  
-
-Article
-========================================= */
+/*  =============================== ARTICLE =============================== */
 
 #article {
 	padding: 50px;
@@ -326,12 +311,7 @@ Article
 
 
 
-/*  
-
-Contact
-========================================= */
-
-
+/*  =============================== CONTACT =============================== */
 
 #contact {
 	display: flex;
@@ -384,37 +364,82 @@ footer {
 }
 
 
-/*  
+/*  =============================== FORM =============================== */
 
-FORM  
-========================================= */
+main.stormcenter {
+	margin: 0 auto;
+	display: block;
+	/* margin: 0 auto; */
+	/* margin-bottom: 50px; */
+	/* width: 100%; */
+	/* display: flex; */
+	/* flex-wrap: wrap; */
+	/* justify-content:space-evenly; */
+}
 
 .form-wrapper {
-	display: flex;
-	flex-direction: column;
+	display: block;
+	/* flex-direction: column; */
 	width: 100%;
-	padding: 0 10px 0 10px;
+	/* padding: 0 10px 0 10px; */
+	border: 1px solid red;
 }
 
 form fieldset {
-	margin-bottom: 3rem;
-	padding: 1rem;
+	display: block;
+	margin-bottom: 2rem 0;
+	padding: .5rem 2%;
+	border: 1px solid var(--color-blue);
+	border-radius: 15px;
 }
 
 form legend {
-	font-family: sans-serif;
-	font-weight: bold;
-    font-size: 1.2em;
+	color: var(--color-blue);
+	margin: 0 1rem;
+	padding: 0 .5rem;
 }
 
-form input, 
+form label.top, form div {
+	display: block;
+	padding: 1rem;
+	font-size: 1rem;
+}
+
+form label.top input, form label.top select {
+	display: block;
+	font-size: 1rem;
+	padding: .75rem;
+	border: 1px solid var(--color-blue);
+	border-radius: 4px;
+}
+
+
+/* form input, 
 form textarea {
 	display: block;
 	width: 100%;
 	margin-top: .2rem;
 	margin-bottom: 1rem;
 	padding: 1rem;
-}
+} */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 form label .top, form div {
     /* display: block;
@@ -433,13 +458,13 @@ form label.top, form label.top select {
     max-width: 30rem; */
 }
 form label.sbs {
-	display: block;
+	/* display: block; */
     /* display: block;
     padding: 0.75em 0;
     color: #555; */
 }
 form label.sbs input {
-    width: auto;
+    /* width: auto; */
 }
 
 form input.submitBtn {
