--- a/lesson8/css/main.css
+++ b/lesson8/css/main.css
@@ -29,12 +29,27 @@ h6 {
 }
 
 body {
+  font-family: "Open Sans", sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+}
+
+body {
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   display: flex;
   flex-direction: column;
+  align-content: center;
+  justify-content: center;
   background-color: #ebebd3;
-  font-family: "Open Sans", sans-serif;
 }
 
 header {
@@ -140,15 +155,10 @@ nav ul.responsive li {
 
 main {
   padding: 1rem;
-  /* margin: 0 auto;
-  margin-bottom: 50px;
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content:space-evenly; */
+  margin-bottom: 10rem;
 }
 
-main h2 {
+h2 {
   text-align: center;
 }
 
@@ -158,6 +168,10 @@ main.gallery {
   column-gap: 20px;
   row-gap: 20px;
   margin-bottom: 50px;
+}
+
+footer {
+  margin: 0 auto;
 }
 
 main.gallery img[data-src] {
@@ -179,6 +193,302 @@ main.gallery img {
 .image-card img {
   width: 100%;
   margin-bottom: 5px;
+}
+
+.thankyou h1 {
+  font-size: 5em;
+  margin-bottom: 1rem;
+}
+
+.thankyou p {
+  text-align: center;
+}
+
+#StormCenterForm {
+  margin: 0 auto;
+  width: 100%;
+}
+
+form fieldset {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin: 2rem 0;
+  padding: 1rem 2%;
+  border: 1px solid var(--color-blue);
+  border-radius: 15px;
+}
+
+form legend {
+  color: var(--color-blue);
+  margin: 0 1rem;
+  padding: 0 0.5rem;
+}
+
+form label.top,
+form div, textarea {
+  display: block;
+  padding-top: 1rem;
+  color: red;
+  font-size: 0.8rem;
+}
+
+form label.top input,
+form label.top select {
+  -webkit-appearance: none;
+  display: block;
+  width: 100%;
+  font-size: 1rem;
+  padding: 0.75rem;
+  border: 1px solid var(--color-blue);
+  border-radius: 4px;
+  color: #555;
+}
+
+form label.sbs {
+  display: block;
+  padding: 0.75rem;
+  color: #555;
+}
+
+form input.submit-button {
+  width: 100%;
+  max-width: 20rem;
+  margin: 0.75rem 0 2rem 2%;
+  padding: 0.75rem 1.5rem;
+  border: none;
+  background: var(--color-blue);
+  color: white;
+  border-radius: 1rem;
+}
+
+form input.submit-button:hover {
+  cursor: pointer;
+}
+
+form label.top input:required {
+  border-left: red solid 6px;
+}
+
+form label.top input:required:valid {
+  border-left: green solid 6px;
+}
+
+form textarea {
+  font-family: monospace;
+  font-size: 1.5em;
+  line-height: 1.5em;
+  padding: 1rem;
+  color: black;
+  display: block;
+  width: 100%;
+  height: 15rem;
+}
+
+#currentRating {
+  font-size: 2em;
+}
+
+@media (min-width: 40em) {
+  header {
+    display: block;
+    height: 80px;
+  }
+
+  #branding {
+    margin: 0 auto;
+    max-width: 60rem;
+  }
+
+  #hamburger {
+    display: none;
+  }
+
+  #letterhead h1 {
+    font-size: 1.7em;
+  }
+
+  #letterhead span {
+    font-size: 1em;
+  }
+
+  nav ul {
+    display: flex;
+    flex-direction: row;
+    max-width: 60rem;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+  }
+
+  nav ul li {
+    display: block;
+  }
+
+  nav a {
+    font-size: 0.9em;
+  }
+
+  main h2 {
+    text-align: left;
+  }
+
+  main.gallery {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  #hero h2 {
+    text-align: left;
+  }
+
+  #current-temperature {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    margin: 10px 0 0 10px;
+    box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.5);
+  }
+
+  #forecast {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 30px;
+    padding-top: 20px;
+  }
+
+  #forecast div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 15%;
+    height: 100px;
+    margin-bottom: 50px;
+  }
+
+  #forecast img {
+    max-height: 90%;
+    max-width: 90%;
+  }
+
+  #forecast div span {
+    display: block;
+    margin-bottom: 10px;
+  }
+
+  #article img {
+    max-width: 50%;
+    float: right;
+    margin: 0 0 20px 20px;
+    box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.5);
+  }
+
+  #contact {
+    flex-direction: row-reverse;
+    align-items: flex-start;
+    justify-content: space-between;
+    margin: 0 auto;
+    width: 100%;
+    padding: 30px;
+  }
+
+  #contact div {
+    width: 40%;
+  }
+
+  #contact h2 {
+    margin-bottom: 30px;
+  }
+
+  #contact img {
+    display: inline;
+    width: 40%;
+  }
+
+  #StormCenterForm {
+    max-width: 60rem;
+  }
+
+  form label.top input,
+form label.top select {
+    max-width: 30rem;
+  }
+}
+@media (min-width: 80rem) {
+  header {
+    height: 120px;
+  }
+
+  #branding,
+nav ul,
+form,
+footer {
+    max-width: 80rem;
+  }
+
+  footer {
+    margin: 0 auto;
+  }
+
+  #letterhead h1 {
+    font-size: 3em;
+  }
+
+  #letterhead span {
+    font-size: 1.2em;
+  }
+
+  nav a {
+    font-size: 1em;
+  }
+
+  main.gallery {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  main.gallery .image-card:hover {
+    box-shadow: 10px 10px 8px #888888;
+    cursor: pointer;
+  }
+
+  #current-temperature {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    margin: 10px 0 0 10px;
+    box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.5);
+    transition-property: grid-column;
+    transition-duration: 4s;
+    transition-delay: 2s;
+  }
+
+  #article img {
+    max-width: 20%;
+  }
+
+  #contact {
+    max-width: 1080px;
+  }
+
+  #StormCenterForm {
+    max-width: 40rem;
+  }
+
+  form label.top input,
+form label.top select {
+    max-width: 40rem;
+    font-size: 0.8rem;
+    padding: 0.6rem;
+  }
+
+  form label.sbs {
+    padding: 0.4rem 0;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
