--- a/lesson8/css/medium.css
+++ b/lesson8/css/medium.css
@@ -1,154 +1,128 @@
-@media (min-width: 600px) {
-
+@media (min-width: 40em) {
     header {
-        display: block;
-        height: 80px;
+      display: block;
+      height: 80px;
     }
-
+  
     #branding {
-        margin: 0 auto;
-        max-width: 1080px;
+      margin: 0 auto;
+      max-width: 60rem;
     }
-
+  
     #hamburger {
-        display: none;
+      display: none;
     }
-
+  
     #letterhead h1 {
-        font-size: 1.7em;
+      font-size: 1.7em;
     }
-
+  
     #letterhead span {
-        font-size: 1em;
+      font-size: 1em;
     }
-
+  
     nav ul {
-        display: flex;
-        flex-direction: row;
-        max-width: 1024px;
-        margin: 0;
-        padding: 0;
-        text-align: center;
+      display: flex;
+      flex-direction: row;
+      max-width: 60rem;
+      margin: 0;
+      padding: 0;
+      text-align: center;
     }
-
+  
     nav ul li {
-        display: block;
+      display: block;
     }
-
+  
     nav a {
-        font-size: .9em;
+      font-size: 0.9em;
     }
-
-    main {
-        max-width: 1000px;
-    }
-
+  
     main h2 {
-        text-align: left;
+      text-align: left;
     }
-
+  
     main.gallery {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
     }
-
-
+  
     #hero h2 {
-        text-align: left;
+      text-align: left;
     }
-
+  
     #current-temperature {
-        grid-column-start: 1;
-        grid-column-end: 3;
-        grid-row-start: 2;
-        grid-row-end: 3;
-        margin: 10px 0 0 10px;
-        box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, .5);
+      grid-column-start: 1;
+      grid-column-end: 3;
+      grid-row-start: 2;
+      grid-row-end: 3;
+      margin: 10px 0 0 10px;
+      box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.5);
     }
-
+  
     #forecast {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        margin-bottom: 30px;
-        padding-top: 20px;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      margin-bottom: 30px;
+      padding-top: 20px;
     }
-
+  
     #forecast div {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        width: 15%;
-        height: 100px;
-        margin-bottom: 50px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 15%;
+      height: 100px;
+      margin-bottom: 50px;
     }
-
+  
     #forecast img {
-        max-height: 90%;
-        max-width: 90%;
+      max-height: 90%;
+      max-width: 90%;
     }
-
+  
     #forecast div span {
-        display: block;
-        margin-bottom: 10px;
+      display: block;
+      margin-bottom: 10px;
     }
-
+  
     #article img {
-        max-width: 50%;
-        float: right;
-        margin: 0 0 20px 20px;
-        box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, .5);
+      max-width: 50%;
+      float: right;
+      margin: 0 0 20px 20px;
+      box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.5);
     }
-
+  
     #contact {
-        flex-direction: row-reverse;
-        align-items: flex-start;
-        justify-content: space-between;
-        margin: 0 auto;
-        width: 100%;
-        padding: 30px;
+      flex-direction: row-reverse;
+      align-items: flex-start;
+      justify-content: space-between;
+      margin: 0 auto;
+      width: 100%;
+      padding: 30px;
     }
-
+  
     #contact div {
-        width: 40%;
+      width: 40%;
     }
-
+  
     #contact h2 {
-        margin-bottom: 30px;
+      margin-bottom: 30px;
     }
-
+  
     #contact img {
-        display: inline;
-        width: 40%;
+      display: inline;
+      width: 40%;
     }
-
-    /*  
-
-    FORM  
-    ========================================= */
-    .form-wrapper {
-        display: flex;
-        flex-wrap: wrap;
-        /* flex-direction: column; */
-        width: 75%;
-        padding: 0 10px 0 10px;
+  
+    #StormCenterForm {
+      max-width: 60rem;
     }
-    
-    .form-group {
-        margin-bottom: 20px;
+  
+    form label.top input,
+  form label.top select {
+      max-width: 30rem;
     }
-    
-    .form-group span {
-        display: block;
-        margin-bottom: 5px;
-    }
-    
-    .form-group input {
-        width: 100%;
-        margin-bottom: 10px;
-        padding: 15px;
-        font-size: 1em;
-    }
-
-}
+  }
