--- a/lesson8/scss/partials/_layout.scss
+++ b/lesson8/scss/partials/_layout.scss
@@ -3,6 +3,7 @@ body {
     -ms-text-size-adjust: 100%;
     display: flex;
     flex-direction: column;
+    align-content: center;
+    justify-content: center;
 	background-color: #ebebd3;
-	font-family: 'Open Sans', sans-serif;
 }
