--- a/lesson8/scss/partials/_main.scss
+++ b/lesson8/scss/partials/_main.scss
@@ -3,15 +3,10 @@
 
 main {
 	padding: 1rem;
-	/* margin: 0 auto;
-	margin-bottom: 50px;
-	width: 100%;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content:space-evenly; */
+	margin-bottom: 10rem;
 }
 
-main h2 {
+h2 {
 	text-align: center;
 }
 
@@ -21,6 +16,10 @@ main.gallery {
 	column-gap: 20px;
 	row-gap: 20px;
 	margin-bottom: 50px;
+}
+
+footer {
+	margin: 0 auto;
 }
 
 
@@ -46,4 +45,14 @@ main.gallery img {
 .image-card img {
 	width: 100%;
 	margin-bottom: 5px;
+}
+
+// Thank you
+.thankyou h1 {
+	font-size: 5em;
+	margin-bottom: 1rem;
+}
+
+.thankyou p {
+	text-align: center;
 }
