--- a/lesson9-weather/css/styles.css
+++ b/lesson9-weather/css/styles.css
@@ -58,7 +58,6 @@ header #branding {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
   height: 100%;
 }
 header #logo {
@@ -99,7 +98,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 50px;
+  margin-bottom: 0px;
   background-color: var(--color-navigation-background);
   user-select: none;
 }
@@ -140,14 +139,16 @@ nav ul.responsive li {
 }
 
 main {
-  margin: 0 auto;
-  max-width: 1080px;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  padding-top: 15px;
 }
-
 main h2 {
+  margin-bottom: 1rem;
+  font-size: 2em;
   text-align: center;
 }
 
@@ -158,54 +159,48 @@ main.gallery {
   row-gap: 20px;
   margin-bottom: 50px;
 }
-
+main.gallery .image-card {
+  padding: 10px;
+  background-color: white;
+}
+main.gallery .image-card img {
+  width: 100%;
+  margin-bottom: 5px;
+}
 main.gallery img[data-src] {
   filter: blur(0.2em);
 }
-
 main.gallery img {
   filter: blur(0em);
   transition: filter 0.5s;
 }
 
-.image-card {
-  padding: 10px;
-  background-color: white;
-  /* margin-right: 10px; */
-  /* margin-left: 10px; */
+main.thankyou h1 {
+  font-size: 5em;
+  margin-bottom: 1rem;
 }
-
-.image-card img {
-  width: 100%;
-  margin-bottom: 5px;
+main.thankyou p {
+  text-align: center;
 }
 
 #hero {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 30px 1fr 1fr;
+  grid-template-rows: repeat(1, 1fr);
   row-gap: 15px;
   margin-bottom: 30px;
 }
-
-#hero h2 {
-  grid-column: 1/5;
-  grid-row: 1/1;
-  text-align: center;
-}
-
-#hero img,
 #hero picture {
   grid-column-start: 1;
   grid-column-end: 5;
-  grid-row-start: 2;
+  grid-row-start: 1;
   grid-row-end: 4;
-  width: 100%;
-  /* border-radius: 5px; */
   z-index: 0;
 }
-
-#current-temperature {
+#hero picture img {
+  width: 100%;
+}
+#hero #current-temperature {
   grid-column-start: 1;
   grid-column-end: 5;
   grid-row-start: 4;
@@ -214,7 +209,6 @@ main.gallery img {
   padding: 10px;
   color: white;
   background-color: rgba(0, 50, 0, 0.9);
-  /* border-radius: 5px; */
   z-index: 2;
 }
 
@@ -267,6 +261,7 @@ main.gallery img {
 }
 
 #contact {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -298,51 +293,124 @@ main.gallery img {
   margin-left: 10px;
 }
 
+form {
+  display: block;
+  width: 100%;
+  text-align: left;
+}
+form fieldset {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin: 2rem 0;
+  padding: 2rem 5%;
+  border: 1px solid var(--color-blue);
+  border-radius: 5px;
+}
+form fieldset legend {
+  color: var(--color-blue);
+  margin: 0 1rem;
+  padding: 0 0.5rem;
+}
+form input,
+form select,
+form span {
+  margin-bottom: 10px;
+}
+form label.top input,
+form label.top select {
+  -webkit-appearance: none;
+  display: block;
+  width: 100%;
+  font-size: 1rem;
+  padding: 0.75rem;
+  border: 1px solid var(--color-blue);
+  border-radius: 4px;
+  color: #555;
+}
+form label.top,
+form div,
+form textarea {
+  display: block;
+  padding-top: 0.5rem;
+  color: red;
+  font-size: 0.8rem;
+}
+form label.sbs {
+  display: block;
+  padding: 0.75rem;
+  color: #555;
+}
+form input.submit-button {
+  width: 100%;
+  margin: 0 0 2rem 0;
+  padding: 0.75rem 1.5rem;
+  border: none;
+  background: var(--color-blue);
+  color: white;
+  border-radius: 0.5rem;
+}
+form input.submit-button:hover {
+  cursor: pointer;
+}
+form label.top input:required {
+  border-left: red solid 6px;
+}
+form label.top input:required:valid {
+  border-left: green solid 6px;
+}
+form textarea {
+  font-family: monospace;
+  font-size: 1.5em;
+  line-height: 1.5em;
+  padding: 1rem;
+  color: black;
+  display: block;
+  width: 100%;
+  height: 15rem;
+}
+form #currentRating {
+  font-size: 2em;
+}
+
 footer {
   width: 100%;
   margin: 0 auto;
-  max-width: 1080px;
   padding: 30px 15px 30px 15px;
-  max-width: 1080px;
   font-size: 0.8em;
   color: #fff;
   text-align: center;
   background-color: var(--color-navigation-hover);
 }
 
-@media (min-width: 600px) {
+@media (min-width: 800px) {
   header {
     display: block;
+    flex-direction: column;
     height: 80px;
   }
   header #branding {
     margin: 0 auto;
-    max-width: 1080px;
-  }
-  header #hamburger {
-    display: none;
+    width: 800px;
   }
   header #letterhead h1 {
     font-size: 1.7em;
   }
   header #letterhead span {
-    font-size: 1em;
+    font-size: 0.9em;
+  }
+  header #hamburger {
+    display: none;
   }
 
   nav ul {
-    display: flex;
     flex-direction: row;
-    max-width: 1024px;
-    margin: 0;
-    padding: 0;
-    text-align: center;
+    max-width: 800px;
   }
-
   nav ul li {
     display: block;
   }
-
-  nav a {
+  nav ul li a {
     font-size: 0.9em;
   }
 
@@ -350,28 +418,51 @@ footer {
     text-align: left;
   }
 
+  main {
+    width: 800px;
+  }
+
   main.gallery {
-    display: grid;
     grid-template-columns: 1fr 1fr;
+    width: 800px;
+  }
+  main.gallery .image-card {
+    padding: 10px;
+    background-color: white;
+  }
+  main.gallery .image-card img {
+    width: 100%;
+    margin-bottom: 5px;
+  }
+  main.gallery img[data-src] {
+    filter: blur(0.2em);
+  }
+  main.gallery img {
+    filter: blur(0em);
+    transition: filter 0.5s;
   }
 
-  #hero h2 {
-    text-align: left;
+  #hero {
+    grid-template-rows: repeat(2, 1fr);
   }
-
-  #current-temperature {
+  #hero picture {
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start: 1;
+    grid-row-end: 3;
+  }
+  #hero #current-temperature {
     grid-column-start: 1;
     grid-column-end: 3;
-    grid-row-start: 2;
-    grid-row-end: 3;
-    margin: 10px 0 0 10px;
-    box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.5);
+    grid-row-start: 1;
+    grid-row-end: 2;
   }
 
   #forecast {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    width: 100%;
     margin-bottom: 30px;
     padding-top: 20px;
   }
@@ -424,10 +515,31 @@ footer {
     display: inline;
     width: 40%;
   }
+
+  form {
+    width: 800px;
+  }
+  form label.top input,
+form label.top select {
+    max-width: 800px;
+  }
+
+  footer {
+    width: 800px;
+    margin: 0 auto;
+    padding: 30px 15px 30px 15px;
+    font-size: 0.8em;
+    color: #fff;
+    text-align: center;
+    background-color: var(--color-navigation-hover);
+  }
 }
-@media (min-width: 1080px) {
+@media (min-width: 1200px) {
   header {
     height: 120px;
+  }
+  header #branding {
+    width: 1200px;
   }
   header #letterhead h1 {
     font-size: 3em;
@@ -436,12 +548,25 @@ footer {
     font-size: 1.2em;
   }
 
-  nav a {
+  nav ul {
+    max-width: 1200px;
+  }
+  nav ul li {
+    display: block;
+  }
+  nav ul li a {
     font-size: 1em;
   }
 
+  main {
+    width: 1200px;
+  }
+
   main.gallery {
-    display: grid;
+    width: 1200px;
+  }
+
+  main.gallery {
     grid-template-columns: 1fr 1fr 1fr;
   }
 
@@ -450,16 +575,20 @@ footer {
     cursor: pointer;
   }
 
-  #current-temperature {
+  #hero {
+    grid-template-rows: repeat(3, 1fr);
+  }
+  #hero picture {
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start: 1;
+    grid-row-end: 4;
+  }
+  #hero #current-temperature {
     grid-column-start: 1;
     grid-column-end: 2;
-    grid-row-start: 2;
-    grid-row-end: 3;
-    margin: 10px 0 0 10px;
-    box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.5);
-    transition-property: grid-column;
-    transition-duration: 4s;
-    transition-delay: 2s;
+    grid-row-start: 1;
+    grid-row-end: 2;
   }
 
   #article img {
@@ -467,7 +596,24 @@ footer {
   }
 
   #contact {
-    max-width: 1080px;
+    max-width: 1200px;
+  }
+
+  form {
+    width: 600px;
+  }
+  form label.top input,
+form label.top select {
+    max-width: 600px;
+    padding: 0.6rem;
+    font-size: 0.8rem;
+  }
+  form label.sbs {
+    padding: 0.4rem 0;
+  }
+
+  footer {
+    width: 1200px;
   }
 }
 
