--- a/lesson9-weather/scss/_small.scss
+++ b/lesson9-weather/scss/_small.scss
@@ -43,6 +43,10 @@ h2 {
     margin-bottom: 10px;
 }
 
+
+
+// ---------- HEADER ----------
+
 header {
     display: flex;
     flex-direction: row;
@@ -58,7 +62,6 @@ header {
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content: center;
         height: 100%;
     }
 
@@ -103,11 +106,15 @@ header {
     }
 }
 
+
+
+// ---------- NAVIGATION ----------
+
 nav {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 50px;
+    margin-bottom: 0px;
     background-color: var(--color-navigation-background);
     user-select: none;
 
@@ -154,18 +161,23 @@ nav {
 }
 
 
+
 // ---------- MAIN ----------
 
 main {
-    margin: 0 auto;
-    max-width: 1080px;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-}
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    padding-top: 15px;
 
-main h2 {
-    text-align: center;
+    h2 {
+        margin-bottom: 1rem;
+        font-size: 2em;
+        text-align: center;
+    }
+
 }
 
 main.gallery {
@@ -174,29 +186,42 @@ main.gallery {
     column-gap: 20px;
     row-gap: 20px;
     margin-bottom: 50px;
-}
 
-main.gallery img[data-src] {
-    filter: blur(0.2em);
-}
+    .image-card {
+        padding: 10px;
+        background-color: white;
+    }
 
-main.gallery img {
-    filter: blur(0em);
-    transition: filter 0.5s;
-}
-
-.image-card {
-    padding: 10px;
-    background-color: white;
-    /* margin-right: 10px; */
-    /* margin-left: 10px; */
-}
+    .image-card img {
+        width: 100%;
+        margin-bottom: 5px;
+    }
 
 
-.image-card img {
-    width: 100%;
-    margin-bottom: 5px;
+    img[data-src] {
+        filter: blur(0.2em);
+    }
+
+    img {
+        filter: blur(0em);
+        transition: filter 0.5s;
+    }
+
 }
+
+main.thankyou {
+    h1 {
+        font-size: 5em;
+        margin-bottom: 1rem;
+    }
+
+    p {
+        text-align: center;
+    }
+}
+
+
+
 
 
 // ---------- HERO ----------
@@ -204,41 +229,38 @@ main.gallery img {
 #hero {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 30px 1fr 1fr;
+    grid-template-rows: repeat(1, 1fr);
     row-gap: 15px;
     margin-bottom: 30px;
+
+    picture {
+        grid-column-start: 1;
+        grid-column-end: 5;
+        grid-row-start: 1;
+        grid-row-end: 4;
+        // width: 100%;
+        z-index: 0;
+
+        img {
+            width: 100%;
+        }
+    }
+
+    #current-temperature {
+        grid-column-start: 1;
+        grid-column-end: 5;
+        grid-row-start: 4;
+        grid-row-end: 5;
+        margin-bottom: 15px;
+        padding: 10px;
+        color: white;
+        background-color: rgba(0, 50, 0, .9);
+        z-index: 2;
+
+    }
 }
 
-#hero h2 {
-    grid-column: 1 / 5;
-    grid-row: 1 / 1;
-    text-align: center;
-}
 
-#hero img,
-#hero picture {
-    grid-column-start: 1;
-    grid-column-end: 5;
-    grid-row-start: 2;
-    grid-row-end: 4;
-    width: 100%;
-    /* border-radius: 5px; */
-    z-index: 0;
-}
-
-#current-temperature {
-    grid-column-start: 1;
-    grid-column-end: 5;
-    grid-row-start: 4;
-    grid-row-end: 5;
-    margin-bottom: 15px;
-    padding: 10px;
-    color: white;
-    background-color: rgba(0, 50, 0, .9);
-    /* border-radius: 5px; */
-    z-index: 2;
-
-}
 
 #hero table {
     width: 100%;
@@ -264,11 +286,14 @@ main.gallery img {
 }
 
 
+
 // ---------- FORECAST ----------
 
 #forecast {
     display: none;
 }
+
+
 
 // ---------- ARTICLE ----------
 
@@ -298,6 +323,7 @@ main.gallery img {
 // ---------- CONTACT ----------
 
 #contact {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -329,15 +355,109 @@ main.gallery img {
     margin-left: 10px;
 }
 
+// ---------- STORMCENTER FORM ----------
+
+form {
+    display: block;
+    width: 100%;
+    text-align: left;
+
+    fieldset {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        margin: 2rem 0;
+        padding: 2rem 5%;
+        border: 1px solid var(--color-blue);
+        border-radius: 5px;
+
+        legend {
+            color: var(--color-blue);
+            margin: 0 1rem;
+            padding: 0 0.5rem;
+        }
+
+    }
+
+    input,
+    select,
+    span {
+        margin-bottom: 10px;
+    }
+
+    label.top input,
+    label.top select {
+        -webkit-appearance: none;
+        display: block;
+        width: 100%;
+        font-size: 1rem;
+        padding: 0.75rem;
+        border: 1px solid var(--color-blue);
+        border-radius: 4px;
+        color: #555;
+    }
+
+    label.top,
+    div,
+    textarea {
+        display: block;
+        padding-top: 0.5rem;
+        color: red;
+        font-size: 0.8rem;
+    }
+
+    label.sbs {
+        display: block;
+        padding: 0.75rem;
+        color: #555;
+    }
+
+    input.submit-button {
+        width: 100%;
+        margin: 0 0 2rem 0;
+        padding: 0.75rem 1.5rem;
+        border: none;
+        background: var(--color-blue);
+        color: white;
+        border-radius: .5rem;
+    }
+
+    input.submit-button:hover {
+        cursor: pointer;
+    }
+
+    label.top input:required {
+        border-left: red solid 6px;
+    }
+
+    label.top input:required:valid {
+        border-left: green solid 6px;
+    }
+
+    textarea {
+        font-family: monospace;
+        font-size: 1.5em;
+        line-height: 1.5em;
+        padding: 1rem;
+        color: black;
+        display: block;
+        width: 100%;
+        height: 15rem;
+    }
+
+    #currentRating {
+        font-size: 2em;
+    }
+
+}
+
 
 // ---------- FOOTER ----------
 
 footer {
     width: 100%;
     margin: 0 auto;
-    max-width: 1080px;
     padding: 30px 15px 30px 15px;
-    max-width: 1080px;
     font-size: .8em;
     color: #fff;
     text-align: center;
